<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reports"
        android:title="@string/menu_reports"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_graph"
        android:title="@string/menu_graph"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new_session"
        android:title="@string/menu_new_session"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_description"
        android:title="@string/menu_description"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
